# cplusplus-starter

./: CMakeLists.txt  README.md  main.cpp
include/: header.h
lib/include/lib1/: lib1.cpp  lib1.h
src/: src.cpp
